crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache-miss-reasons/snapshots/cwd changed.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run test # cache miss
$ vtt print-file test.txt
initial content
> mkdir -p subfolder

> cp test.txt subfolder/test.txt

> vtt json-edit vite-task.json "_.tasks.test.cwd = 'subfolder'" # change cwd

> vt run test # cache miss: cwd changed
~/subfolder$ vtt print-file test.txt ○ cache miss: working directory changed, executing
initial content
