crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache-miss-reasons/snapshots/env value changed.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> cross-env MY_ENV=1 vt run test # cache miss
$ print-file test.txt
initial content
> cross-env MY_ENV=2 vt run test # cache miss: env value changed
$ print-file test.txt 〇 cache miss: envs changed, executing
initial content
