crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache-miss-reasons/snapshots/input config changed.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run test # cache miss
$ vtt print-file test.txt
initial content
> vtt json-patch vite-task.json '[{"op":"add","path":"/tasks/test/input","value":["test.txt"]}]' # change input config

> vt run test # cache miss: configuration changed
$ vtt print-file test.txt ○ cache miss: input configuration changed, executing
initial content
