crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache-miss-reasons/snapshots/pass-through env removed.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
assertion_line: 203
expression: e2e_outputs
input_file: crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache-miss-reasons
---
> json-edit vite.config.json "_.tasks.test.passThroughEnvs = ['MY_PASSTHROUGH']" # setup

> vite run test # cache miss
$ print-file test.txt
initial content


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   1 tasks • 0 cache hits • 1 cache misses 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] cache-miss-reasons#test: $ print-file test.txt ✓
      → Cache miss: no previous cache entry found
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

> json-edit vite.config.json "delete _.tasks.test.passThroughEnvs" # remove pass-through env

> vite run test # cache miss: pass-through env removed
$ print-file test.txt ✗ cache miss: pass-through env config changed, executing
initial content


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   1 tasks • 0 cache hits • 1 cache misses 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] cache-miss-reasons#test: $ print-file test.txt ✓
      → Cache miss: pass-through env 'MY_PASSTHROUGH' removed
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
