crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache-miss-reasons/snapshots/untracked env added.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run test # cache miss
$ vtt print-file test.txt
initial content
> vtt json-patch vite-task.json '[{"op":"add","path":"/tasks/test/untrackedEnv","value":["MY_UNTRACKED"]}]' # add untracked env

> vt run test # cache miss: untracked env added
$ vtt print-file test.txt ○ cache miss: untracked env config changed, executing
initial content
